--- a/manuscripts/24-john-kerr-growth-trust-science/old/24-kerr-growth-trust-science.qmd
+++ b/manuscripts/24-john-kerr-growth-trust-science/old/24-kerr-growth-trust-science.qmd
@@ -423,7 +423,7 @@ combo_male_graph_gee <- plot_trust_science_male_gee  + plot_trust_scientists_mal
 
 
 # back of envelop calculation
-# #number of people in NZ > 18 year olds in 2021/22
+# #number of people in NZ > 18 year olds 
 # nz_adult_population <- 3989000
 nz_20_over <- 3.9276
 #source;https://www.stats.govt.nz/information-releases/national-population-estimates-at-30-june-2023
@@ -435,7 +435,8 @@ total_population <- 3927600
 
 lo_num_in_2019_trust_science = round(total_population * .083)
 lo_num_in_2019_trust_science
-# number in 2022
+
+# number in wave 2023 (years 2023-2024)
 lo_num_in_2022_trust_science = round(total_population * .098)
 lo_num_in_2022_trust_science
 
@@ -480,17 +481,6 @@ trust_scientists_2022
 trust_science_2019
 trust_science_change
 
-
-## Create the data frame
-# data <- data.frame(
-#   Response = c("Trust Science Factor - Low", "Trust Science Factor - Med", "Trust Science Factor - High",
-#                "Trust Scientists Factor - Low", "Trust Scientists Factor - Med", "Trust Scientists Factor - High"),
-#   `2019` = c(3523, 13446, 25712, 5056, 14660, 22965),
-#   `2020` = c(3782, 11329, 27570, 4632, 13279, 24770),
-#   `2021` = c(4003, 11624, 27054, 5180, 13345, 24156),
-#   `2022` = c(4163, 12184, 26334, 5224, 14498, 22959),
-#   stringsAsFactors = FALSE
-# )
 
 
 
