--- a/manuscripts/manuscripts.tex
+++ b/manuscripts/manuscripts.tex
@@ -107,6 +107,15 @@
 \usepackage[normalem]{ulem}
 \usepackage{makecell}
 \usepackage{xcolor}
+\usepackage{tabularray}
+\usepackage[normalem]{ulem}
+\usepackage{graphicx}
+\UseTblrLibrary{booktabs}
+\UseTblrLibrary{rotating}
+\UseTblrLibrary{siunitx}
+\NewTableCommand{\tinytableDefineColor}[3]{\definecolor{#1}{#2}{#3}}
+\newcommand{\tinytableTabularrayUnderline}[1]{\underline{#1}}
+\newcommand{\tinytableTabularrayStrikeout}[1]{\sout{#1}}
 \input{/Users/joseph/GIT/latex/latex-for-quarto.tex}
 \let\oldtabular\tabular
 \renewcommand{\tabular}{\small\oldtabular}
@@ -158,8 +167,8 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={The New Zealand Muslim Diversity Study: Baseline Sample Information 2023-2024},
-  pdfauthor={M. Usman Afzali; Aarif Rasheed; Chris G. Sibley; Kumar Yogeswaaran; Joseph A. Bulbulia},
+  pdftitle={Evidence for Declining Trust in Science From A Large National Panel Study in New Zealand (years 2019-2024)},
+  pdfauthor={Authors},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -168,135 +177,98 @@
   pdfcreator={LaTeX via pandoc}}
 
 
-\title{The New Zealand Muslim Diversity Study: Baseline Sample
-Information 2023-2024}
+\title{Evidence for Declining Trust in Science From A Large National
+Panel Study in New Zealand (years 2019-2024)}
 
 \usepackage{academicons}
 \usepackage{xcolor}
 
-  \author{M. Usman Afzali}
+  \author{Authors}
             \affil{%
-             \small{     University of Otago New Zealand
+             \small{     New Zealand
           ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0003-3169-6576 }
-              }
-      \usepackage{academicons}
-\usepackage{xcolor}
-
-  \author{Aarif Rasheed}
-            \affil{%
-             \small{     University of Otago New Zealand
-          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0000-0000-0000 }
-              }
-      \usepackage{academicons}
-\usepackage{xcolor}
-
-  \author{Chris G. Sibley}
-            \affil{%
-             \small{     School of Psychology, University of Auckland,
-New Zealand
-          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-4064-8800 }
-              }
-      \usepackage{academicons}
-\usepackage{xcolor}
-
-  \author{Kumar Yogeswaaran}
-            \affil{%
-             \small{     University of Canterbury New Zealand
-          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-1978-5077 }
-              }
-      \usepackage{academicons}
-\usepackage{xcolor}
-
-  \author{Joseph A. Bulbulia}
-            \affil{%
-             \small{     Victoria University of Wellington, New Zealand
-          ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-5861-2056 }
               }
       
 
 
-\date{2024-12-05}
+\date{2024-12-08}
 \begin{document}
 \maketitle
 \begin{abstract}
-In this study, we present demographic statistics from the first wave of
-the New Zealand Muslim Diversity Study (MSD 2023-2024). We describe
-patterns of religious identity and behaviour within the MDS cohort and
-examine self-reported multi-dimensional well-being. By comparing Muslim
-demographic, religious, and psychological diversity with that of the
-broader New Zealand population, we discover patterns of variation within
-and between religious groups that are not evident from group
-affiliations alone. Our findings uncover new commonalities between
-Muslims and other highly religious groups in New Zealand, and clarify
-that group-level averages do not capture the full spectrum of individual
-religious differences. \textbf{KEYWORDS}: Diversity; Longitudinal;
-Muslim, Panel; Religion
+The public's perception of science has wide-ranging effects, from the
+adoption public health behaviours to climate action. This study uses
+nationally representative panel data from New Zealand to assess changes
+in trust in science and trust in scientists between late 2019 and late
+2024. We draw on a large cohort (N = 42,681, New Zealand Attitudes and
+Values Study). Study 1 uses multiple imputation to address biases from
+systematic attrition, ensuring more accurate population estimates of
+trust. Study 2 models average trust responses over time, showing that
+trust in science and scientists rose following New Zealand's Covid-19
+response, but later declined. We also find evidence for variation above
+and below the mean. Study 3 assesses proportional shifts across low,
+medium, and high levels of trust, revealing rising mistrust at both the
+lower and higher ends. Considering these shifts at a population level
+suggests that nearly 60,000 New Zealanders who once held moderate trust
+may now exhibit low trust in science. \textbf{KEYWORDS}:
+\emph{Conservativism}; \emph{Institutional Trust}; \emph{Longitudinal};
+\emph{Panel}; \emph{Political}; \emph{Science}.
 \end{abstract}
 
 
-The New Zealand Attitudes and Values Study (NZAVS) is a nationally
-representative panel study of New Zealanders started in 2009. It has
-measured 76,409 participants annually, and is presently tracking 32,857
-participants, about 1\% of New Zealand's adult population.
+\subsection{Introduction}\label{introduction}
 
-Despite strong NZAVS coverage of New Zealand's denominations, in the
-largest NZAVS cohort, less than .01\% of New Zealand's Muslims were
-participating (n = 53). That is, the New Zealand Attitudes and Values
-Study was under-representing Muslims by an order of magnitude below the
-New Zealand census estimates.
+\subsubsection{Study 2: Categorical Mistrust in Science and Scientists
+over
+Time}\label{study-2-categorical-mistrust-in-science-and-scientists-over-time}
 
-The Muslim Diversity Study, led by Usman Afzali (UA), has been built
-through partnership with the Muslim community partnerships to boost the
-New Zealand Attitudes and Values Muslim sample by \textasciitilde600
-participants to obtain coverage of about 1\% of the New Zealand Census
-estimate of New Zealand Muslim Community.
-
-The premise of this study has been to enable extend national
-longitudinal science of the study of Muslim diversity and flourishing
-over the lifespan, to understand the scope of such diversity and the
-challenges to such flourishing, and to clarify the affordances through
-which Muslims overcome adversity that has been previously documented in
-other research (refs.)
-
-The Muslim Diversity Study is important first, because the lifelong
-dynamics of Muslim flourishing are poorly understood; this project
-addresses an urgent scientific need.
-
-Second, our work with the Muslim community revealed a strong community
-interest in Muslim flourishing science; this project is an attempt to
-address this interest by involving Muslims in this science.
-
-Third, this project serves as a model for developing panel studies of
-under-represented groups in Aoteoroa New Zealand and in other countries.
-
-Table~\ref{tbl-religion-id}
-
-\begin{table}
-
-\caption{\label{tbl-religion-id}Adjusted means and 95\% confidence
-intervals for religious identification by religious denomination.}
+\begin{figure}
 
 \centering{
 
-\centering\begingroup\fontsize{11}{13}\selectfont
+\pandocbounded{\includegraphics[keepaspectratio]{manuscripts_files/figure-pdf/fig-science-categorical-1.pdf}}
 
-\begin{tabular}[t]{lrrrr}
+}
+
+\caption{\label{fig-science-categorical}(A) Predicted probability of
+classification for trust in science without adjusting for missingness
+(B) Predicted probability of classification for trust in science
+adjusting for missingness. Responses categories are low (1-3), medium
+(4-5), high (6-7) on the 1-7 ordinal scale.}
+
+\end{figure}%
+
+\begin{table}
+
+\caption{\label{tbl-categorical-science-observed}Predicted probability
+of classification for trust in science without adjusting for missing
+responses. Responses categories are low (1-3), medium (4-5), high
+(6-7).}
+
+\centering{
+
+\centering\begingroup\fontsize{12}{14}\selectfont
+
+\begin{tabular}[t]{lll}
 \toprule
-Religion & predicted & std.error & conf.low & conf.high\\
+Years & Predicted (95\% CI) & Response\\
 \midrule
-\cellcolor{gray!10}{Not Religious} & \cellcolor{gray!10}{0.97} & \cellcolor{gray!10}{0.01} & \cellcolor{gray!10}{0.95} & \cellcolor{gray!10}{0.98}\\
-Muslim & 6.21 & 0.03 & 6.16 & 6.27\\
-\cellcolor{gray!10}{Anglican} & \cellcolor{gray!10}{3.87} & \cellcolor{gray!10}{0.03} & \cellcolor{gray!10}{3.81} & \cellcolor{gray!10}{3.94}\\
-Buddhist & 4.74 & 0.05 & 4.63 & 4.84\\
-\cellcolor{gray!10}{Catholic} & \cellcolor{gray!10}{4.52} & \cellcolor{gray!10}{0.02} & \cellcolor{gray!10}{4.47} & \cellcolor{gray!10}{4.56}\\
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
+1 & 0.08 (0.08, 0.09) & low\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.08 (0.08, 0.08)} & \cellcolor{gray!10}{low}\\
+3 & 0.08 (0.08, 0.08) & low\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.07 (0.07, 0.08)} & \cellcolor{gray!10}{low}\\
 \addlinespace
-Christian (NFD) & 5.57 & 0.02 & 5.54 & 5.61\\
-\cellcolor{gray!10}{Christian (Others)} & \cellcolor{gray!10}{5.75} & \cellcolor{gray!10}{0.03} & \cellcolor{gray!10}{5.69} & \cellcolor{gray!10}{5.81}\\
-Hindu & 5.17 & 0.06 & 5.06 & 5.28\\
-\cellcolor{gray!10}{Jewish} & \cellcolor{gray!10}{4.90} & \cellcolor{gray!10}{0.12} & \cellcolor{gray!10}{4.67} & \cellcolor{gray!10}{5.14}\\
-Presby Congreg Reform & 4.18 & 0.05 & 4.08 & 4.27\\
+0 & 0.32 (0.31, 0.32) & med\\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.25 (0.24, 0.25)} & \cellcolor{gray!10}{med}\\
+2 & 0.23 (0.23, 0.24) & med\\
+\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.24 (0.23, 0.24)} & \cellcolor{gray!10}{med}\\
+4 & 0.24 (0.23, 0.24) & med\\
 \addlinespace
-\cellcolor{gray!10}{Other Religions} & \cellcolor{gray!10}{4.89} & \cellcolor{gray!10}{0.04} & \cellcolor{gray!10}{4.81} & \cellcolor{gray!10}{4.96}\\
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.59 (0.59, 0.60)} & \cellcolor{gray!10}{high}\\
+1 & 0.67 (0.66, 0.67) & high\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.69 (0.68, 0.69)} & \cellcolor{gray!10}{high}\\
+3 & 0.68 (0.68, 0.69) & high\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.69 (0.68, 0.70)} & \cellcolor{gray!10}{high}\\
 \bottomrule
 \end{tabular}
 \endgroup{}
@@ -305,7 +277,236 @@ Presby Congreg Reform & 4.18 & 0.05 & 4.08 & 4.27\\
 
 \end{table}%
 
-\subsection{References}\label{references}
+\begin{table}
+
+\caption{\label{tbl-categorical-science-imputed}Predicted probability of
+classification for trust in science, now adjusting for missing
+responses. Responses categories are low (1-3), medium (4-5), high
+(6-7).}
+
+\centering{
+
+\centering\begingroup\fontsize{12}{14}\selectfont
+
+\begin{tabular}[t]{lll}
+\toprule
+Years & Predicted (95\% CI) & Response\\
+\midrule
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
+1 & 0.09 (0.09, 0.09) & low\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
+3 & 0.09 (0.09, 0.10) & low\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
+\addlinespace
+0 & 0.32 (0.31, 0.32) & med\\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.27 (0.27, 0.28)} & \cellcolor{gray!10}{med}\\
+2 & 0.27 (0.27, 0.28) & med\\
+\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.29 (0.28, 0.29)} & \cellcolor{gray!10}{med}\\
+4 & 0.30 (0.29, 0.30) & med\\
+\addlinespace
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.59 (0.58, 0.60)} & \cellcolor{gray!10}{high}\\
+1 & 0.63 (0.63, 0.64) & high\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.63 (0.63, 0.64)} & \cellcolor{gray!10}{high}\\
+3 & 0.62 (0.61, 0.62) & high\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.61 (0.61, 0.62)} & \cellcolor{gray!10}{high}\\
+\bottomrule
+\end{tabular}
+\endgroup{}
+
+}
+
+\end{table}%
+
+Figure~\ref{fig-science-categorical} displays predicted probabilities
+for being classified as low (1--3), medium (4--5), or high (6--7) in
+trust in science over time. Table~\ref{tbl-categorical-science-observed}
+presents these probabilities without adjusting for missing responses.
+Under these conditions, the proportion of respondents in the high
+category appears to increase from the baseline and remain relatively
+elevated. However, after adjusting for missingness (see
+Table~\ref{tbl-categorical-science-imputed}), the predicted
+probabilities show a less stable pattern, with gains in the high
+category tempered and the medium category becoming more prominent. These
+differences underscore that ignoring missing responses can create an
+artificial appearance of stronger sustained trust.
+
+\begin{figure}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{manuscripts_files/figure-pdf/fig-scientists-categorical-1.pdf}}
+
+}
+
+\caption{\label{fig-scientists-categorical}(A) Predicted probability of
+classification for trust in scientists without adjusting for missingness
+(B) Predicted probability of classification for trust in scientists
+adjusting for missingness. Responses categories are low (1-3), medium
+(4-5), high (6-7) on the 1-7 ordinal scale.}
+
+\end{figure}%
+
+\begin{table}
+
+\caption{\label{tbl-categorical-scientists-observed}Predicted
+probability of classification for trust in scientists without adjusting
+for missing responses. Responses categories are low (1-3), medium (4-5),
+high (6-7).}
+
+\centering{
+
+\centering\begingroup\fontsize{12}{14}\selectfont
+
+\begin{tabular}[t]{lll}
+\toprule
+Years & Predicted (95\% CI) & Response\\
+\midrule
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.12 (0.11, 0.12)} & \cellcolor{gray!10}{low}\\
+1 & 0.09 (0.09, 0.09) & low\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.08 (0.08, 0.08)} & \cellcolor{gray!10}{low}\\
+3 & 0.08 (0.08, 0.09) & low\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.09 (0.09, 0.09)} & \cellcolor{gray!10}{low}\\
+\addlinespace
+0 & 0.34 (0.33, 0.34) & med\\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.29 (0.28, 0.29)} & \cellcolor{gray!10}{med}\\
+2 & 0.28 (0.28, 0.28) & med\\
+\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.30 (0.29, 0.30)} & \cellcolor{gray!10}{med}\\
+4 & 0.33 (0.32, 0.33) & med\\
+\addlinespace
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.55 (0.54, 0.55)} & \cellcolor{gray!10}{high}\\
+1 & 0.62 (0.62, 0.63) & high\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.64 (0.63, 0.64)} & \cellcolor{gray!10}{high}\\
+3 & 0.62 (0.61, 0.62) & high\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.58 (0.58, 0.59)} & \cellcolor{gray!10}{high}\\
+\bottomrule
+\end{tabular}
+\endgroup{}
+
+}
+
+\end{table}%
+
+\begin{table}
+
+\caption{\label{tbl-categorical-scientists-imputed}Predicted probability
+of classification for trust in scientists, now adjusting for missing
+responses. Responses categories are low (1-3), medium (4-5), high
+(6-7).}
+
+\centering{
+
+\centering\begingroup\fontsize{12}{14}\selectfont
+
+\begin{tabular}[t]{lll}
+\toprule
+Years & Predicted (95\% CI) & Response\\
+\midrule
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.12 (0.12, 0.12)} & \cellcolor{gray!10}{low}\\
+1 & 0.11 (0.10, 0.11) & low\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.11 (0.11, 0.11)} & \cellcolor{gray!10}{low}\\
+3 & 0.12 (0.12, 0.12) & low\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.13 (0.13, 0.13)} & \cellcolor{gray!10}{low}\\
+\addlinespace
+0 & 0.34 (0.33, 0.35) & med\\
+\cellcolor{gray!10}{1} & \cellcolor{gray!10}{0.31 (0.31, 0.32)} & \cellcolor{gray!10}{med}\\
+2 & 0.31 (0.31, 0.32) & med\\
+\cellcolor{gray!10}{3} & \cellcolor{gray!10}{0.33 (0.33, 0.34)} & \cellcolor{gray!10}{med}\\
+4 & 0.35 (0.35, 0.36) & med\\
+\addlinespace
+\cellcolor{gray!10}{0} & \cellcolor{gray!10}{0.54 (0.53, 0.55)} & \cellcolor{gray!10}{high}\\
+1 & 0.58 (0.58, 0.59) & high\\
+\cellcolor{gray!10}{2} & \cellcolor{gray!10}{0.58 (0.57, 0.58)} & \cellcolor{gray!10}{high}\\
+3 & 0.55 (0.54, 0.56) & high\\
+\cellcolor{gray!10}{4} & \cellcolor{gray!10}{0.52 (0.51, 0.52)} & \cellcolor{gray!10}{high}\\
+\bottomrule
+\end{tabular}
+\endgroup{}
+
+}
+
+\end{table}%
+
+A similar pattern emerges for trust in scientists (see
+Figure~\ref{fig-scientists-categorical}). Without adjusting for
+missingness, the results (shown in
+Table~\ref{tbl-categorical-scientists-observed}) suggest that the
+proportion classified as high in trust remains consistently large. Once
+we incorporate multiple imputation to address missing responses, as
+presented in Table~\ref{tbl-categorical-scientists-imputed}, the
+predicted probabilities shift. The high category becomes less dominant
+over time, and more respondents fall into the medium category than would
+have been inferred without proper adjustment. In other words, accounting
+for nonresponse reveals a more nuanced pattern of trust that does not
+simply trend upward, and this correction prevents inflated estimates of
+stable or increasing trust in scientists.
+
+\subsection{Discussion}\label{discussion}
+
+These findings illustrate that failing to adjust for missing responses
+can systematically distort estimates of public trust in science and
+scientists. Compared to models that ignore missingness, our
+imputation-adjusted analyses indicate that the unadjusted models
+overestimate the proportion of the population with high trust by several
+hundred thousand New Zealand adults and underestimate the proportion
+with low trust by tens to hundreds of thousands. For example, when trust
+in science is not adjusted for missingness, we appear to be
+underestimating the share of the population with low trust by about
+82,000 people, while simultaneously overstating the size of the
+high-trust group by roughly 330,000. Similarly, for trust in scientists,
+the discrepancy in the low-trust population is about 165,000
+individuals, and the high-trust category may be inflated by about
+248,000. These differences represent substantial distortions in
+population-level estimations.
+
+It is important to note that these are minimum bounds of potential
+misestimation, as we cannot measure trust among individuals who declined
+participation at the study's outset. Moreover, we have not established
+any causal relationships, and our objective is not to identify
+determinants of changing trust, but rather to describe and characterise
+differences in trust distributions over time. Still, given that trust in
+science can influence critical actions related to climate change,
+vaccine uptake, and following health advice, accurately documenting
+trust and its temporal shifts is a pressing concern. By accounting for
+missing data, we gain a clearer and more credible picture of
+population-level trust in science and scientists, enabling
+better-informed public health messaging and policy decisions.
+
+\begin{table}
+
+\caption{\label{tbl-categorical-science-imputed}Predicted probability of
+classification for trust in science, now adjusting for missing
+responses. Responses categories are low (1-3), medium (4-5), high
+(6-7).}
+
+\centering{
+
+\begin{tabular}[t]{rrrrrl}
+\toprule
+Years & predicted & std.error & conf.low & conf.high & response.level\\
+\midrule
+0 & 0.09 & 0 & 0.09 & 0.09 & low\\
+0 & 0.32 & 0 & 0.31 & 0.32 & med\\
+0 & 0.59 & 0 & 0.58 & 0.60 & high\\
+1 & 0.09 & 0 & 0.09 & 0.09 & low\\
+1 & 0.27 & 0 & 0.27 & 0.28 & med\\
+\addlinespace
+1 & 0.63 & 0 & 0.63 & 0.64 & high\\
+2 & 0.09 & 0 & 0.09 & 0.09 & low\\
+2 & 0.27 & 0 & 0.27 & 0.28 & med\\
+2 & 0.63 & 0 & 0.63 & 0.64 & high\\
+3 & 0.09 & 0 & 0.09 & 0.10 & low\\
+\addlinespace
+3 & 0.29 & 0 & 0.28 & 0.29 & med\\
+3 & 0.62 & 0 & 0.61 & 0.62 & high\\
+4 & 0.09 & 0 & 0.09 & 0.09 & low\\
+4 & 0.30 & 0 & 0.29 & 0.30 & med\\
+4 & 0.61 & 0 & 0.61 & 0.62 & high\\
+\bottomrule
+\end{tabular}
+
+}
+
+\end{table}%
 
 
 
